Exercise N9 has been added