@@ -1,7 +1,6 @@
 package com.HelloData;
-import java.util.*;
 
 //Exercise N9 Thinking on Java p.93
 public class AutoPackager {
-    Character ch = Character.valueOf('f');
+    Character ch = new Character('f');
 }
